--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
+    "axios": "^0.21.1",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "node-sass": "^4.13.1",
@@ -25,6 +26,7 @@
     "react-dom": "^17.0.1",
     "react-loading": "^2.0.3",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
